# CodeSnippets

./: .gitignore  .gitmodules  README.md  generate.py
algorithm/: .gitignore  CMakeLists.txt  Dockerfile  README.md  generate.py
algorithm/arrary/: 7.cpp  8.cpp
algorithm/bitset_number/: README.md
algorithm/interview/: ntoa.cpp
algorithm/niuke/: CMakeLists.txt
algorithm/other/: AEasyTask.cpp  AGroupTheIntegers.cpp  ALottery.cpp  BEWasyNumberGame.cpp  CHowManyNines.cpp  CMakeLists.txt  GoldPrize.cpp  HexConvert.cpp  NumberOf1.cpp  Party.cpp  StrangeSorting.cpp  aplusb  aplusb.cpp  beautifullist.cpp  ipmode.cpp  np.cpp
algorithm/sword2/: 1.cpp  6.cpp  README.md
algorithm/util/: common_define.h
c/: bitcopy.c
compsci_basics/: README.md
cpp/: .gitignore  Dockerfile  Dockerfile_gcc4.4  README.md  build_image.sh  cc.sh  run.sh
cpp/build_system/: CMakeLists.txt  build.sh
cpp/build_system/.cache/clangd/index/: main.cpp.6B9DBE493EFDF3FB.idx  testlib.cpp.C465EFFEBB4D0B87.idx  testlib.hpp.01D3907D99F33A9B.idx  testlib2.cpp.DE6009E98FC14FE3.idx  testlib2.hpp.D144FD1C75A6A755.idx
cpp/build_system/testexe/: CMakeLists.txt  main.cpp
cpp/build_system/testlib/: CMakeLists.txt  testlib.cpp  testlib.hpp
cpp/build_system/testlib2/: CMakeLists.txt  testlib2.cpp
cpp/c++primer/: 0.begin  0.begin.cpp  README.md  arrary.cpp  bit.cpp  buildin_type.cpp  class_member_init.cpp  const.cpp  control_flow.cpp  exepression.cpp  inherit_construct.cpp  iterator.cpp  list_initialization.cpp  noexcept.cpp  override_final.cpp  right_value_quote.cpp  right_value_quote_1.cpp  string.cpp  struct.cpp  switch.cpp  type_conversions.cpp
cpp/cpp11/: CMakeLists.txt  cpp11_features.cpp
cpp/cpp11_features/: stability_compatibility.cpp
cpp/lifecycle/: life_test.cpp
cpp/multithreading/: README.md
cpp/network/: get_eth_addr.cpp  get_local_host_addr.cpp
cpp/smart_ptr/: ptr.cpp  sharedptr_demo.cpp
cpp/sometest/: offset_and_operator.cpp  ptr_test.cpp
cpp/stl/: queue.cpp
cpp/string/: ostringstream_demo.cpp  string.cpp
cpp/string_test/: str_test.cpp
cpp/threads/: README.md  lock_demo.cpp  thread_demo.cpp  thread_lock.cpp
cpp/timer/: README.md  time_cost.cpp
cpp/timestamp/: README.md  timestamp.cpp  timestamp.h  timestamp_uinttest.cpp
cpp/utils/: http_url_parse.cpp
cpp11/: CMakeLists.txt  common.cpp  someTest.cpp  stability_compatibility.cpp  thread_demo.cpp
cpp11/mulity_thread/: CMakeLists.txt  thread_demo.cpp
cpp11/stability/: CMakeLists.txt  stability_compatibility.cpp
golang/: README.md  echo2.go  run.sh
golang/channels/: channels  join.go  main.go
golang/docker/: Dockerfile  build_image.sh
golang/httpserver/: Dockerfile  go.mod  main.go  main_fastapi.py  main_flask.py  stress.sh  uwsgi.ini
golang/jsontest/: main.go
golang/module_test/: go.mod  main.go
golang/mytest/: Makefile  main.go
golang/netmask/: go.mod  netmask.go
golang/pointer/: pointer_demo.go
golang/redis_fluid_controll/: go.mod  go.sum  main.go
golang/simple/: go.mod  main.go  simple
golang/timer/: main.go  timer
golang/type_safe/: go.mod  main.go
golang/validator_test/: go.mod  param_test.go
linux/: helloworld  helloworld.i  helloworld.s
python3/: .gitignore  Dockerfile  README.md  base.py  base_test.py  build_image.sh  class.py  context_demo.py  debug.py  dict_test.py  files_op.py  fstring.py  function.py  generator.py  list_demo.py  map_filter_reduce.py  run.sh  set.py  tmp.py  try_cache.py
python3/celery_demo/: call.py  chain_call.py  (+2 more)
question_collating/: README.md  cast_casing.cpp
rust/: .gitignore
shell/: check_ip.sh  func.sh  getopts_demo.sh  if.sh  log.sh  memory_check.sh  param.sh
sql/: README.md
(+236 files in other folders)
